# rust-note-crud

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md
db/: docker-compose.yaml  init.sql
src/: main.rs
src/router/: _index.rs  model.rs
src/router/handlers/: create_note.rs  get_notes.rs  health.rs
src/utils/: db.rs  env.rs  log.rs
